# nestd

./: .gitignore  README.md  README.rst  pyproject.toml
nestd/: __init__.py
nested/: __init__.py
tests/: test_nestd.py  test_nested.py
